--- a/app/package.json
+++ b/app/package.json
@@ -29,7 +29,7 @@
     "@react-native-community/async-storage": "1.4.0",
     "@trackforce/react-native-crypto": "0.0.8",
     "@types/js-base64": "2.3.1",
-    "axios": "0.18.0",
+    "axios": "^0.19.0",
     "buffer": "5.2.1",
     "eventemitter3": "3.1.0",
     "js-base64": "2.5.1",
